modified:   Makefile         modified:   poetry.lock         modified:   pyproject.toml         new file:   task_manager/locale/ru/LC_MESSAGES/django.mo         new file:   task_manager/locale/ru/LC_MESSAGES/django.po         modified:   task_manager/settings.py         modified:   task_manager/templates/index.html

--- a/task_manager/templates/index.html
+++ b/task_manager/templates/index.html
@@ -1,11 +1,15 @@
-<!doctype html>
+{% load i18n %}
+{% load django_bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+{% bootstrap_messages %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Hello Django on Render!</title>
+    <title>{% trans "Task Manager" %}</title>
 
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -13,12 +17,28 @@
           crossorigin="anonymous">
 </head>
 <body>
-<main class="container">
-    <div class="row text-center justify-content-center">
-        <div class="col">
-            <h1 class="display-4">Hello World!</h1>
+    <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">{% trans "Task Manager" %}</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarColor02">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <a class="nav-link active" href="#">{% trans "Users" %}
+                  <span class="visually-hidden">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">{% trans "Log In" %}</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">{% trans "Sign Up" %}</a>
+              </li>
+            </form>
+          </div>
         </div>
-    </div>
-</main>
+      </nav>
 </body>
 </html>
