--- a/task_manager/templates/home.html
+++ b/task_manager/templates/home.html
@@ -1,9 +1,37 @@
+{% extends 'base.html' %}
+
 {% load i18n %}
 {% load django_bootstrap5 %}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 {% bootstrap_messages %}
-<html lang="en">
+
+{% block title %}
+    {% trans 'Task Manager' %}
+{% endblock %}
+
+{% block content %}
+<div class="card">
+  <div class="card-body p-5 bg-light">
+      <h1 class="my-4 display-4">{% trans 'Task Manager' %}</h1>
+      <p class="lead">{% trans 'Simple and flexible task management web application' %}</p>
+
+      <hr>
+
+      {% if user.is_authenticated %}
+          <a class="btn btn-primary btn-lg" href="#">
+      {% else %}
+          <a class="btn btn-primary btn-lg" href="{% url 'login' %}">
+      {% endif %}
+
+      {% trans 'Get Started' %}
+      </a>
+
+  </div>
+</div>
+{% endblock %}
+
+<!-- <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -26,19 +54,25 @@
           <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="#">{% trans "Users" %}
+                <a class="nav-link active" href="/users/">{% trans "Users" %}
                   <span class="visually-hidden">(current)</span>
                 </a>
               </li>
+              {% if request.user.is_authenticated %}
               <li class="nav-item">
-                <a class="nav-link" href="#">{% trans "Log In" %}</a>
+                <a class="nav-link" href="/logout/">{% trans "Log Off" %}</a>
+              </li>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="/login/">{% trans "Log In" %}</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">{% trans "Sign Up" %}</a>
+                <a class="nav-link" href="/users/create/">{% trans "Sign Up" %}</a>
               </li>
+              {% endif %}
             </form>
           </div>
         </div>
       </nav>
 </body>
-</html>
+</html> -->
