create new model tasks and crud for it

--- a/task_manager/templates/statuses/index.html
+++ b/task_manager/templates/statuses/index.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <h1 class="my-4">{{ title }}</h1>
-<a class="nav-link" href="{% url 'statuses-create' %}">{% trans 'Create status' %}</a>
+<a href="{% url 'statuses-create' %}">{% trans 'Create status' %}</a>
     <table class="table table-striped">
         <thead class="thead-dark">
             <tr>
