--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -20,7 +20,7 @@
                     <a class="nav-link" href="#">{% trans "Labels" %}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">{% trans "Tasks" %}</a>
+                    <a class="nav-link" href="{% url 'tasks' %}">{% trans "Tasks" %}</a>
                 </li>
             {% endif %}
         </ul>
