--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -17,7 +17,7 @@
                     <a class="nav-link" href="{% url 'statuses-detail' %}">{% trans "Statuses" %}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">{% trans "Labels" %}</a>
+                    <a class="nav-link" href="{% url 'labels_detail' %}">{% trans "Labels" %}</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'tasks' %}">{% trans "Tasks" %}</a>
