--- a/task_manager/templates/home.html
+++ b/task_manager/templates/home.html
@@ -19,7 +19,7 @@
       <hr>
 
       {% if user.is_authenticated %}
-          <a class="btn btn-primary btn-lg" href="#">
+          <a class="btn btn-primary btn-lg" href="{% url 'tasks' %}">
       {% else %}
           <a class="btn btn-primary btn-lg" href="{% url 'login' %}">
       {% endif %}
@@ -30,49 +30,3 @@
   </div>
 </div>
 {% endblock %}
-
-<!-- <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>{% trans "Task Manager" %}</title>
-
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-          crossorigin="anonymous">
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">{% trans "Task Manager" %}</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarColor02">
-            <ul class="navbar-nav me-auto">
-              <li class="nav-item">
-                <a class="nav-link active" href="/users/">{% trans "Users" %}
-                  <span class="visually-hidden">(current)</span>
-                </a>
-              </li>
-              {% if request.user.is_authenticated %}
-              <li class="nav-item">
-                <a class="nav-link" href="/logout/">{% trans "Log Off" %}</a>
-              </li>
-              {% else %}
-              <li class="nav-item">
-                <a class="nav-link" href="/login/">{% trans "Log In" %}</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/users/create/">{% trans "Sign Up" %}</a>
-              </li>
-              {% endif %}
-            </form>
-          </div>
-        </div>
-      </nav>
-</body>
-</html> -->
