fix name of field for task model

--- a/task_manager/templates/tasks/task_detail.html
+++ b/task_manager/templates/tasks/task_detail.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="card-body bg-light">
-        <p>{{ task.body }}</p>
+        <p>{{ task.description }}</p>
 
         <hr>
 
