--- a/task_manager/templates/users/index.html
+++ b/task_manager/templates/users/index.html
@@ -6,7 +6,7 @@
 {% block title %}{{ page_title }} | {% trans 'Task Manager' %}{% endblock %}
 
 {% block content %}
-    <h1 class="my-4">{{ title }}</h1>
+    <h1 class="my-4">{% trans 'Users' %}</h1>
 
     <table class="table table-striped">
         <thead class="thead-dark">
