--- a/task_manager/templates/delete.html
+++ b/task_manager/templates/delete.html
@@ -10,7 +10,7 @@
 <h1 class="my-4">{{ title }}</h1>
 
     <form method="post">
-        <p>{% trans 'Are you sure that you want to delete this Status ?' %} {{status.name}}</p>
+        <p>{{ message }} {{ entity_name }} ?</p>
         {% csrf_token %}
         {% bootstrap_form form %}
         {% bootstrap_button button_text button_type="submit" button_class="btn btn-primary" %}
