--- a/task_manager/templates/labels/create.html
+++ b/task_manager/templates/labels/create.html
@@ -8,12 +8,12 @@
 {% endblock %}
 
 {% block content %}
-    <h1 class="my-4">{% trans 'Login' %}</h1>
+    <h1 class="my-4">{% trans 'Create Label' %}</h1>
 
     <form method="post">
         {% csrf_token %}
         {% bootstrap_form form %}
-        {% trans 'Enter' as button_text %}
+        {% trans 'Create' as button_text %}
         {% bootstrap_button button_text button_type="submit" button_class="btn btn-primary" %}
     </form>
 {% endblock %}
