--- a/task_manager/templates/tasks/task_detail.html
+++ b/task_manager/templates/tasks/task_detail.html
@@ -6,7 +6,7 @@
 {% block title %}{{ page_title }} | {% trans 'Task Manager' %}{% endblock %}
 
 {% block content %}
-<h1 class="my-4">{{ title }}</h1>
+<h1 class="my-4">{% trans 'Viewing a task' %}</h1>
 
 <div class="card">
     <div class="card-header bg-secondary text-white">
