--- a/task_manager/templates/users/create.html
+++ b/task_manager/templates/users/create.html
@@ -3,16 +3,17 @@
 {% load django_bootstrap5 %}
 {% load i18n %}
 
-{% block title %}{{ page_title }} | {% trans 'Task Manager' %}{% endblock %}
+{% block title %}
+    {{ title }} | {% translate 'Task Manager' %}
+{% endblock %}
 
 {% block content %}
-
-<h1 class="my-4">{{ title }}</h1>
+    <h1 class="my-4">{% trans 'Create user' %}</h1>
 
     <form method="post">
-        <p>{{ message }} {{ entity_name }} ?</p>
         {% csrf_token %}
         {% bootstrap_form form %}
+        {% trans 'Register' as button_text %}
         {% bootstrap_button button_text button_type="submit" button_class="btn btn-primary" %}
     </form>
 {% endblock %}
